<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical">
		
	    <!--<RelativeLayout
			android:id="@+id/relativelayout_info_richi"
			android:layout_width="match_parent"
			android:layout_height="30dp"
			android:orientation="horizontal"
			android:visibility="gone">

			<TextView
	                android:id="@+id/textview_title_counters_richii"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_alignParentBottom="true"
					android:layout_alignParentLeft="true"
					android:textSize="24sp"
					android:textColor="@android:color/primary_text_dark"					
					android:text="@string/contadores" />
	        
	        <TextView
	                android:id="@+id/textview_counters_richii"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_alignParentBottom="true"
					android:layout_toRightOf="@id/textview_title_counters_richii"
					android:layout_marginLeft="5dp"
					android:textSize="24sp"
					android:textColor="@android:color/primary_text_dark" />
	        
	        <LinearLayout 
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_alignParentBottom="true"
					android:layout_alignParentRight="true"
					android:orientation="horizontal">
					
		        <TextView
		                android:id="@+id/textview_title_pot_richii"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:textSize="24sp"
						android:textColor="@android:color/primary_text_dark"					
						android:text="@string/bote" />
		        
		        <TextView
		                android:id="@+id/textview_pot_richii"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:layout_marginLeft="5dp"
						android:textSize="24sp"
						android:textColor="@android:color/primary_text_dark" />
		        
	        </LinearLayout>
	        
	    </RelativeLayout>-->
	    	
	    <LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
	        android:orientation="horizontal"
	        android:layout_weight="1"
	    	android:baselineAligned="false">
	    	
	        <RelativeLayout
	            android:id="@+id/relativelayout_asiento_este"
				android:layout_height="match_parent"
				android:layout_width="match_parent"
	        	android:layout_weight="1"
				android:layout_marginRight="1dp"
				android:layout_marginBottom="1dp"
				android:background="@drawable/shapeasiento"
	            android:layout_gravity="top|left"
	            android:gravity="center">
	            
	            <RelativeLayout
		            android:id="@+id/relativelayout_tapa_este"
					android:layout_height="match_parent"
					android:layout_width="match_parent"
					android:background="@android:color/transparent"
					android:tag="oculto" />

	            <!--<TextView
	                android:id="@+id/textview_repeticiones_jefe_richii"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:layout_centerInParent="true"
					android:layout_alignParentRight="true"
					android:paddingRight="35dp"
					android:textSize="28sp"
					android:textColor="@android:color/primary_text_light"
	            	android:visibility="gone" />-->

                <ImageView
                    android:id="@+id/imageview_viento_asiento_este"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/imgvientoeste"
                    android:contentDescription="@string/img_viento_este" />

	            <TextView
	                android:id="@+id/textview_puntos_jugador_este"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:layout_centerVertical="true"
					android:layout_centerHorizontal="true"
					android:textSize="52sp"
					android:textColor="@android:color/primary_text_light" />

                <TextView
                    android:id="@+id/textview_nombre_jugador_este"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="30sp"
                    android:textColor="@android:color/primary_text_light"
                    android:gravity="center" />

            </RelativeLayout>
	        
	        <RelativeLayout
	            android:id="@+id/relativelayout_asiento_norte"
				android:layout_height="match_parent"
				android:layout_width="match_parent"
	        	android:layout_weight="1"
				android:layout_marginLeft="1dp"
				android:layout_marginBottom="1dp"
				android:background="@drawable/shapeasiento"
	            android:gravity="center">
	            
	            <RelativeLayout
		            android:id="@+id/relativelayout_tapa_norte"
					android:layout_height="match_parent"
					android:layout_width="match_parent"
					android:background="@android:color/transparent"
					android:tag="oculto" />

                <ImageView
                    android:id="@+id/imageview_viento_asiento_norte"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/imgvientonorte"
                    android:contentDescription="@string/img_viento_norte" />

	            <TextView
	                android:id="@+id/textview_puntos_jugador_norte"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="52sp"
					android:textColor="@android:color/primary_text_light" />

                <TextView
                    android:id="@+id/textview_nombre_jugador_norte"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="30dp"
                    android:textColor="@android:color/primary_text_light"
                    android:gravity="center" />

            </RelativeLayout>
	        
	    </LinearLayout>
	    
	    <LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
	        android:orientation="horizontal"
	        android:layout_weight="1"
	    	android:baselineAligned="false">
	        
	        <RelativeLayout
	            android:id="@+id/relativelayout_asiento_sur"
				android:layout_height="match_parent"
				android:layout_width="match_parent"
	        	android:layout_weight="1"
				android:layout_marginRight="1dp"
				android:layout_marginTop="1dp"
				android:background="@drawable/shapeasiento"
	            android:gravity="center">
	            
	            <RelativeLayout
		            android:id="@+id/relativelayout_tapa_sur"
					android:layout_height="match_parent"
					android:layout_width="match_parent"
					android:background="@android:color/transparent"
					android:tag="oculto" />

                <ImageView
                    android:id="@+id/imageview_viento_asiento_sur"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:layout_centerInParent="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/imgvientosur"
                    android:contentDescription="@string/img_viento_sur" />

                <TextView
                    android:id="@+id/textview_puntos_jugador_sur"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="52sp"
                    android:textColor="@android:color/primary_text_light" />

                <TextView
                    android:id="@+id/textview_nombre_jugador_sur"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="32dp"
                    android:textColor="@android:color/primary_text_light"
                    android:gravity="center" />

	        </RelativeLayout>
	        
	        <RelativeLayout
	            android:id="@+id/relativelayout_asiento_oeste"
				android:layout_height="match_parent"
				android:layout_width="match_parent"
	        	android:layout_weight="1"
				android:layout_marginLeft="1dp"
				android:layout_marginTop="1dp"
				android:background="@drawable/shapeasiento"
	            android:gravity="center">
	            
	            <RelativeLayout
		            android:id="@+id/relativelayout_tapa_oeste"
					android:layout_height="match_parent"
					android:layout_width="match_parent"
					android:background="@android:color/transparent"
					android:tag="oculto" />

                <TextView
                    android:id="@+id/textview_nombre_jugador_oeste"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="32dp"
                    android:textColor="@android:color/primary_text_light"
                    android:gravity="center" />

                <TextView
	                android:id="@+id/textview_puntos_jugador_oeste"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="52sp"
					android:textColor="@android:color/primary_text_light" />

                <ImageView
                    android:id="@+id/imageview_viento_asiento_oeste"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:layout_centerInParent="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/imgvientooeste"
                    android:contentDescription="@string/img_viento_oeste" />

            </RelativeLayout>
	        
	    </LinearLayout>
	    
	</LinearLayout>
	
    <RelativeLayout
        android:id="@+id/relativelayout_centro"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:background="@drawable/shapecentro">
	    
        <ImageView
            android:id="@+id/imageview_tapar_centro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
			android:src="@drawable/ic_no_ok"
			android:contentDescription="@android:string/cancel"
			android:padding="20dp"
            android:visibility="invisible" />
        
        <TextView
            android:id="@+id/textview_numero_ronda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_above="@+id/chronometer_mesa"
            android:textSize="18sp"
			android:textColor="@android:color/primary_text_light" />
        
        <Chronometer 
            android:id="@+id/chronometer_mesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp"
			android:textColor="@android:color/primary_text_light"
			android:includeFontPadding="false"
			android:paddingTop="3dp" />
        
        <ImageView
            android:id="@+id/imageview_viento_ronda"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/chronometer_mesa"
            android:contentDescription="@string/img_viento_este_abreviatura" />
        
    </RelativeLayout>
    
</FrameLayout>